added vercel capabilities

--- a/src/content/docs/market-research/personas/template.mdx
+++ b/src/content/docs/market-research/personas/template.mdx
@@ -2,6 +2,9 @@
 title: Persona Template
 ---
 
+REMEMBER NORAS ADVICE! ARCHETYPEES NOT PERSONAS. BUILD AROUND THE PROBLEMS AND NETWORKS NOT THE PERSON, JUST ADD THE TYPICAL PERSON AT THE EEND!!
+
+
 # Core Identity Matrix
 
 ## Strategic Position  
