--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,6 +8,6 @@ hero:
       dark: '../../assets/1.png'}
   actions:
     - text: Learn More
-      link: /overview/about
+      link: /overview/challenge
       icon: right-arrow
 ---
