--- a/src/content/docs/overview/about.mdx
+++ b/src/content/docs/overview/about.mdx
@@ -1,5 +1,6 @@
 ---
 title: About Sociatall
+overviewTitle: About Sociatall
 ---
 
 Small charities are the heartbeat of our communities, stepping in where government support falls short. Yet despite their vital role, many are in silent crisis—held back by outdated technology and a lack of essential skills draining their already limited resources.
