--- a/src/content/docs/overview/help.mdx
+++ b/src/content/docs/overview/help.mdx
@@ -1,10 +1,11 @@
 ---
 title: How You Can Help
+overviewTitle: How You Can Help
 ---
 
 import Calendar from "../../../components/Calendar.svelte";
 
-### Can you make an impact?
+### Can You Make An Impact?
 **Yes, you can absolutely make an impact.** 
 The Small Charity Technology Crisis is a complex challenge—and complex challenges need diverse voices, skills, and solutions.
 
