--- a/src/content/docs/market-research/root-causes/market-factors.mdx
+++ b/src/content/docs/market-research/root-causes/market-factors.mdx
@@ -79,47 +79,73 @@ Charity Commission guidelines require [22% more compliance documentation] for te
 
 ## The Drivers
 
-### Technology Landscape
+# The Technology Landscape for Small Charities: Challenges and Solutions
 
-For small charities to be effective, they must carry out large range of activities across domains like:
+## Operational Complexity of Small Charities
 
-* Impact Reporting & Program Effectiveness
-* Board Management & Governance Oversight
-* Research & Insight Production
-* Awareness & Marketing
-* Fundraising & Donor Management
-* Program Delivery and Case Management
-* Financial Management & Regulatory Compliance
-* Employee & Volunteer Management
-* Resource & Asset Management
-* Cybersecurity & IT Management
-* Internal Knowledge Management & Collaboration
-* SAR & Complaint Management
+For small charities to be effective in today's digital landscape, they must successfully navigate and execute a diverse range of critical operational activities across multiple domains:
 
-The operational complexity that small charities face has created a market opportunity for private companies, resulting in thousands of hardware, software, and service options designed to help charities drive efficiency and effectiveness.
+* **Impact Reporting & Program Effectiveness**: Measuring, analyzing, and communicating the tangible outcomes of charitable initiatives to stakeholders and beneficiaries
+* **Board Management & Governance Oversight**: Facilitating effective leadership, strategic decision-making, and compliance with fiduciary responsibilities
+* **The Production of Primary & Secondary Research**: Gathering evidence, analyzing data, and contributing to the knowledge base that informs program design and advocacy
+* **Awareness & Marketing**: Building public recognition, communicating mission and values, and engaging with potential supporters across various channels
+* **Fundraising & Donor Management**: Cultivating relationships with donors, processing contributions, and maintaining accurate records of giving histories
+* **Program Delivery and Case Management**: Coordinating the logistics of service provision, tracking beneficiary journeys, and ensuring quality interventions
+* **Financial Management**: Budgeting, accounting, financial reporting, and ensuring responsible stewardship of charitable resources
+* **Regulatory Compliance**: Adhering to legal requirements, maintaining charitable status, and fulfilling reporting obligations to regulatory bodies
+* **Employee & Volunteer Management**: Recruiting, training, scheduling, and retaining both paid staff and unpaid supporters
+* **Resource & Asset Management**: Tracking physical and digital assets, managing inventory, and optimizing resource allocation
+* **Cybersecurity & IT Management**: Protecting sensitive data, maintaining technology infrastructure, and ensuring business continuity
+* **Internal Knowledge Management & Collaboration**: Capturing institutional knowledge, facilitating team communication, and enhancing organizational learning
+* **SAR (Subject Access Requests) & Complaints Management**: Responding to data requests and resolving stakeholder concerns in a timely and compliant manner
 
-However, understanding, selecting, implementing, using, and maintaining these solutions requires both time and expertise. Small charities must either secure that through donation, or work to secure funds to .
+## The Market Response and Charitable Reality
 
-While a completely donated technological infrastructure1 is an ideal, there is a reality underpinning the complexity of achieving it:
+This unique operational complexity that small charities face has created a substantial market opportunity for private companies, resulting in thousands of hardware and software solutions designed to help charities drive efficiency and effectiveness in their operations.
 
-* **Cloud and Onsite Infrastructure Providers** - Must pay for raw materials, infrastructure, power, people, R&D, profits,
-* **Software Providers** - Building and maintaining technology requires significant investment, often requiring private/public funding or debt.
-* **Service Providers** - Grant and donation restrictions exist for private companies which can limit their ability to innovate without passing on costs.
+Understanding, selecting, implementing, integrating, using, and maintaining these technological solutions requires significant investments of time, expertise, and capital—all of which charities must secure through donor contributions, grants, or other fundraising activities, often competing against their core programmatic needs for these limited resources.
 
-Even with donated resources, coordination remains their responsibility.
+While directly donated technological infrastructure may seem ideal, several market realities make this approach complex:
 
-Despite intelligent business models like subscription, consumption pricing, pay as you go, freemium, custom, outcome or performance pricing, percentage Open Core, Collective Buying, 
+The vast majority of hardware and software technology organizations are for-profit entities. This means that their cost structure must reflect not only expenditures for raw materials, infrastructure, power, human capital, research and development, product engineering, delivery systems, customer support, and sales and marketing initiatives, but must also factor in agreed-upon profit or growth margins to satisfy shareholder expectations, investor returns, and capital reinvestment requirements. These profit imperatives drive strategic decision-making throughout the organization, influencing everything from pricing strategies and product development timelines to talent acquisition and market expansion efforts, ultimately determining the organization's long-term viability and competitive positioning within the technology ecosystem.
 
-The current options available for Charities are:
+Despite the proliferation of innovative business models designed to make technology more accessible—such as subscription services, consumption-based pricing, pay-as-you-go models, freemium offerings, custom solutions, outcome or performance pricing, percentage-based Open Core models, and collective buying arrangements—small charities still face significant barriers to technology adoption.
 
-* Pay heavy costs for purpose built software.
-* Pay
-* Pay
-* Leverage free or freemium tools
+## Technology Acquisition Options for Small Charities
 
-Most charities require funding to achieve technological transformation and continuance.
+Small charities face several distinct options when acquiring necessary technology solutions, each with significant advantages and disadvantages:
 
-### Funding Landscape
+| Acquisition Strategy | Description | Advantages | Disadvantages |
+|----------------------|-------------|------------|---------------|
+| **Direct Negotiation with Major Vendors** | Engaging directly with established technology providers to secure custom or discounted solutions designed specifically for nonprofit use | • Potentially robust, purpose-built solutions• Direct relationship with provider• Often includes implementation support• May include specialized nonprofit features | • Typically high initial and ongoing costs• Negotiation requires specialized knowledge• May be inflexible or overly complex• Often requires minimum organization size• Resource-intensive implementation |
+| **Standard Procurement from Major Vendors** | Purchasing standard commercial offerings from leading technology providers at market or slightly discounted nonprofit rates | • Enterprise-grade reliability• Comprehensive feature sets• Regular updates and improvements• Extensive documentation• Established support channels | • Significant budgetary impact• Often designed for corporate needs• Features may exceed actual requirements• Potentially steep learning curve• May require additional customization |
+| **Engagement with Smaller Vendors** | Working with boutique or specialized technology providers that focus on the nonprofit sector | • Often more affordable• Sector-specific functionality• More personalized service• Greater flexibility• Better understanding of charitable needs | • Potential longevity/sustainability concerns• Limited integration capabilities• Smaller support teams• Less frequent updates• Fewer resources for training |
+| **No-Code and Automation Solutions** | Utilizing platforms that allow non-technical staff to build applications and automate workflows without programming | • Empowers non-technical staff• Rapid deployment of solutions• Lower initial investment• Highly customizable• Reduces dependency on IT professionals | • Potential scalability limitations• Hidden technical complexity• Governance and security challenges• Can lead to siloed solutions• May incur unexpected costs as usage grows |
+| **Collective/Group Buying** | Participating in consortiums or umbrella organizations that negotiate technology access for multiple charities | • Leverages collective bargaining power• Reduced individual costs• Shared implementation knowledge• Community of practice• Reduced procurement overhead | • Limited selection of pre-approved vendors• May not meet unique organizational needs• Decision-making can be slow or bureaucratic• Dependency on consortium leadership• Often requires membership fees |
+| **Free/Freemium Tools** | Adopting solutions that offer basic functionality at no cost, with premium features available for purchase | • Minimal budgetary impact• Low barrier to entry• Ability to test before committing• Often cloud-based with no maintenance• Scalable as needs grow | • Limited functionality in free versions• Potential data privacy concerns• Unexpected feature limitations• Risk of vendor monetization changes• Limited support options• Potential for "hidden" costs |
+| **Open Source Solutions** | Implementing freely available software developed by collaborative communities | • No licensing costs• Highly customizable• Community support• Transparency and security review• Freedom from vendor lock-in | • Requires technical expertise to implement• Often lacks user-friendly interfaces• Limited formal support options• Potential integration challenges• Ongoing maintenance requirements |
+| **Technology Grants and Donations** | Securing technology through philanthropic programs of major vendors or technology-focused foundations | • Potentially full-featured solutions at no cost• Can include implementation support• May provide access to premium services• Often includes training resources• Can include hardware and software | • Highly competitive application processes• Time-limited offers or support• Often requires specific use cases• May not align with organizational priorities• Future sustainability concerns |
+| **Shared Services Models** | Participating in collaborative arrangements where multiple organizations share technology resources | • Cost distribution across organizations• Access to specialized expertise• Economies of scale• Shared best practices• Reduced administrative burden | • Governance complexity• Potential competing priorities• Dependency on partner organizations• Reduced autonomy in decision-making• Requires strong collaboration skills |
+
+## The Strategic Imperative
+
+The limited range of viable options means that most small charities need to develop sophisticated strategies to navigate the technology funding landscape effectively. This requires:
+
+1. **Strategic Technology Planning**: Developing comprehensive technology roadmaps aligned with organizational mission and strategic objectives
+2. **Digital Literacy Development**: Building internal capacity and digital skills among staff and volunteers
+3. **Collaborative Partnerships**: Forming strategic alliances with technology providers, funders, and peer organizations
+4. **Blended Funding Approaches**: Combining multiple funding streams specifically earmarked for technology acquisition and maintenance
+5. **Impact Measurement**: Demonstrating the return on investment of technology implementations to attract sustained funding
+6. **Technology Governance**: Establishing clear policies and procedures for technology selection, implementation, and management
+7. **Change Management**: Developing organizational cultures that embrace technological innovation and adaptation
+
+## Conclusion
+
+The technological landscape for small charities presents both significant challenges and opportunities. Despite resource constraints, those organizations that can successfully navigate the complex terrain of technology acquisition, implementation, and maintenance position themselves to dramatically increase their operational efficiency, program effectiveness, and ultimately their social impact. Success requires not only financial resources but also strategic vision, technical knowledge, and organizational adaptability.
+
+As the sector continues to evolve, innovative funding models, collaborative approaches, and purpose-built solutions have the potential to democratize access to transformative technologies, enabling even the smallest charitable organizations to leverage digital tools in pursuit of their missions.
+
+### The Funding Landscape
 
 Technology expenses occupy an ambiguous hybrid space between <span 
     title="<a href='https://www.ivar.org.uk/wp-content/uploads/2023/03/Evidence-review-Why-restrict-grants-IVAR-March-2023-FINAL.pdf'>Definitions borrowed from 'IVAR - Why Restrict Grants?'</a><br/><br/>These are funds that can only be used for the purpose
